@@ -6,8 +6,6 @@
 package io.swagger.api;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.swagger.model.Event;
-import io.swagger.model.Location;
 import io.swagger.model.Map;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -28,11 +26,9 @@ import org.springframework.web.bind.annotation.RequestMethod;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.validation.Valid;
-import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
-@javax.annotation.processing.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2023-06-11T16:16:55.027943953Z[GMT]")
 @Validated
 public interface MapsApi {
 
@@ -52,11 +48,13 @@ public interface MapsApi {
 
     @Operation(summary = "Add a new map", description = "", tags = {})
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "OK")})
+            @ApiResponse(responseCode = "200", description = "OK"),
+            @ApiResponse(responseCode = "409", description = "Not OK")
+    })
     @RequestMapping(value = "/maps",
             consumes = {"application/xml"},
             method = RequestMethod.POST)
-    default ResponseEntity<Void> mapsPost(@Parameter(in = ParameterIn.DEFAULT, description = "", required = true, schema = @Schema()) @Valid @RequestBody Map body) {
+    default ResponseEntity<String> mapsPost(@Parameter(in = ParameterIn.DEFAULT, description = "", required = true, schema = @Schema()) @Valid @RequestBody Map body) {
         // Populate the response with a success status code
         return new ResponseEntity<>(HttpStatus.OK);
     }
@@ -78,14 +76,9 @@ public interface MapsApi {
         sampleMap.setSizeX(10);
         sampleMap.setSizeY(8);
 
-        // Create a sample Event and add it to the map
-        Event sampleEvent = new Event();
-        sampleEvent.setSerial("eventSerial");
-        sampleEvent.setName("Sample Event");
-        sampleEvent.setDescription("This is a sample event");
-        sampleEvent.setLocation(new Location().X(5).Y(5));
+        // Create a sample Event and add it to the ma
 
-        sampleMap.setEvents(Collections.singletonList(sampleEvent));
+        sampleMap.setEvents(List.of("sampleEvent"));
 
         // Return the sample map in the response
         return new ResponseEntity<>(sampleMap, HttpStatus.OK);
